add support for validating list of trust anchors
Signed-off-by: Alfusainey Jallow <alf.jallow@gmail.com>